AUGREL/src/objects/ArticlePDF__c.object
<CustomObject>
    <description>Article Depot
Compliance Requirement 
Store all versions of knowledge articles 
as well as PDF</description>
    <fields>
        <fullName>Add_to_Standard_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Standard Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ArchivedDate__c</fullName>
        <label>ArchivedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticleCreatedBy__c</fullName>
        <label>ArticleCreatedBy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleCreatedDate__c</fullName>
        <label>ArticleCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticleHtml__c</fullName>
        <label>ArticleHtml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ArticleLastModifiedBy__c</fullName>
        <label>ArticleLastModifiedBy</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleLastModifiedDate__c</fullName>
        <label>ArticleLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ArticleNumVersion__c</fullName>
        <externalId>true</externalId>
        <label>ArticleNumVersion</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticlePdfContentVersionId__c</fullName>
        <label>ArticlePdfContentVersionId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleTypeAPI__c</fullName>
        <label>ArticleTypeAPI</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>Article Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Depot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Depot1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Management_Link__c</fullName>
        <formula>HYPERLINK(OrginalArticleVersionId__c, &quot;Edit Knowledge Article &quot; + ArticleNumVersion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Management Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_PDF_Link__c</fullName>
        <formula>IF(ArticlePdfContentVersionId__c =&quot;&quot;, &quot;&quot;,
HYPERLINK(ArticlePdfContentVersionId__c, &quot;View Knowledge Article &quot; + ArticleNumVersion__c+ &quot; PDF in Content&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article PDF Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits__c</fullName>
        <label>Benefits</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Caller_Type_Keywords__c</fullName>
        <label>Caller Type Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <picklist>
            <picklistValues>
                <fullName>Caller Type</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Cause_Solution__c</fullName>
        <label>Cause &amp; Solution</label>
        <length>53768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_FAQs__c</fullName>
        <label>Customer FAQs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DM_Forms__c</fullName>
        <label>DM Form #</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Department_Role__c</fullName>
        <label>Department Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Desk_Guide_Pack__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Desk Guide Pack</label>
        <referenceTo>Desk_Guide_Pack__c</referenceTo>
        <relationshipName>Articles_Depot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Escalation_Notes__c</fullName>
        <label>Escalation Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOPP_Text__c</fullName>
        <label>FOPP Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOPP__c</fullName>
        <label>FOPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstPublishedDate__c</fullName>
        <label>First Published Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Geography_Keywords__c</fullName>
        <label>Geography Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <label>Internal Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Information__c</fullName>
        <label>Key Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KnowledgeContainerName__c</fullName>
        <label>Knowledge Container</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article_URL__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  OrginalArticleId__c  &amp; &quot;?popup=true&quot;,   &quot;View Knowledge Article &quot; + ArticleNumVersion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Container_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Container</label>
        <referenceTo>KnowledgeContainer__c</referenceTo>
        <relationshipLabel>Article Depot (Knowledge Container)</relationshipLabel>
        <relationshipName>Article_Depot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Knowledge_Container__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Knowledge Container</label>
        <referenceTo>KnowledgeContainer__c</referenceTo>
        <relationshipLabel>Article Depot</relationshipLabel>
        <relationshipName>Article_PDFs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastPublishedDate__c</fullName>
        <label>LastPublishedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OrginalArticleId__c</fullName>
        <description>cannot create relationship since articles will come from many article type tables</description>
        <label>OrginalArticleId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrginalArticleVersionId__c</fullName>
        <description>OrginalArticleVersionId__c - cannot use related to</description>
        <label>OrginalArticleVersionId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Steps__c</fullName>
        <label>Process Steps</label>
        <length>65536</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PublishStatus__c</fullName>
        <label>Publish Status</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishedDate__c</fullName>
        <description>Published Date = Version Published Date</description>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>See_Also__c</fullName>
        <label>See Also</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <label>Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrlName__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>states_provinces__c</fullName>
        <description>States and provinces used to restrict the information to specific areas of the selected Country</description>
        <inlineHelpText>States and provinces used to restrict the information to specific areas of the selected Country</inlineHelpText>
        <label>States and Provinces</label>
        <picklist>
            <picklistValues>
                <fullName>States and Provinces</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Articles Depot</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ArticleType__c</columns>
        <columns>ArticleNumVersion__c</columns>
        <columns>ArticlePdfContentVersionId__c</columns>
        <columns>PublishedDate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Title__c</columns>
        <columns>VersionNumber__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>FOPP__c</columns>
        <columns>ArchivedDate__c</columns>
        <columns>Desk_Guide_Pack__c</columns>
        <columns>OrginalArticleVersionId__c</columns>
        <columns>Knowledge_Article_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Archived</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Article_Number__c</columns>
        <columns>ArticleNumVersion__c</columns>
        <columns>PublishedDate__c</columns>
        <columns>ArchivedDate__c</columns>
        <columns>ArticleType__c</columns>
        <columns>PublishStatus__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PublishStatus__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>Archived</label>
    </listViews>
    <listViews>
        <fullName>has_PDF</fullName>
        <columns>Title__c</columns>
        <columns>NAME</columns>
        <columns>ArticleHtml__c</columns>
        <columns>ArticlePdfContentVersionId__c</columns>
        <columns>ArticleType__c</columns>
        <columns>ArticleNumVersion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ArticlePdfContentVersionId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>has PDF</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000000}</displayFormat>
        <label>Articles Depot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Depot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>